syntax = "proto3";
package imversed.infr;

import "gogoproto/gogo.proto";

option go_package = "github.com/imversed/imversed/x/infr/types";

message ChangeMinGasPricesProposal {
  option (gogoproto.equal) = true;
  // title of the proposal
  string title = 1;
  // proposal description
  string description = 2;
  // token identifier can be either the hex contract address of the ERC20 or the
  // Cosmos base denomination
  string minGasPrices = 3;
}